# htseq

./: .ci_deploy.sh  .gitignore  .readthedocs.yaml  .travis.yml  .travis_before_install.sh  .travis_install.sh  MANIFEST.in  README.md  appveyor.yml  buildwheels.sh  deploywheels.sh  pyproject.toml  setup.py  test.sh
.github/workflows/: ci.yml  deploy.yml
HTSeq/: __init__.py  features.py  utils.py
HTSeq/scripts/: count.py  count_with_barcodes.py
HTSeq/scripts/count_features/: count_features_per_file.py  reads_io_processor.py  reads_stats.py
HTSeq/scripts/count_reads_in_feature/: arguments_processor.py  core.py  count_reads_per_file.py  param_builder.py  parameters.py  process_options.py  reads_io_processor.py  reads_stats.py  runner.py  user_defined_arguments.py
continuous-integration/appveyor/conda-recipe/: bld.bat  build.sh  meta.yaml
doc/: htseqcount.rst
doc/tutorials/: highc.rst  tss.rst
example_data/: example_bedgraph.bedgraph  no_contig_overlap_warning_stderr.txt  yeast_RNASeq_excerpt_multiple_types.tsv  yeast_RNASeq_excerpt_non_default_type.tsv
scripts/: htseq-count
src/: _HTSeq.c
src/HTSeq/: _HTSeq.c  _HTSeq.pyx
test/: conftest.py  test_general.py  test_genomic.py  test_htseq-count.py  test_parsers.py  tss_test.py
